(Global DB<=>App 연결작업) View-ViewModel 구성 및 CRUD 구현 진행중

--- a/src/Hanori.Maui.Memo/Views/AllMemoPage.xaml
+++ b/src/Hanori.Maui.Memo/Views/AllMemoPage.xaml
@@ -16,7 +16,12 @@
                      IconImageSource="{FontImage Glyph='+', Color=White, Size=22}" />
     </ContentPage.ToolbarItems>
 
-    <CollectionView>
+    <CollectionView x:Name="notesCollection"
+                    ItemsSource="{Binding Memos}"
+                    Margin="20"
+                    SelectionMode="Single"
+                    SelectionChangedCommand="{Binding SelectNoteCommand}"
+                    SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
         <CollectionView.ItemsLayout>
             <LinearItemsLayout Orientation="Vertical" ItemSpacing="10"/>
         </CollectionView.ItemsLayout>
@@ -24,8 +29,8 @@
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <StackLayout>
-                    <Label Text="{Binding Text}"/>
-                    <Label Text="{Binding Date}"/>
+                    <Label Text="{Binding Text}" FontSize="22"/>
+                    <Label Text="{Binding Date}" FontSize="14" TextColor="Silver"/>
                 </StackLayout>
             </DataTemplate>
         </CollectionView.ItemTemplate>
