--- a/src/Hanori.Maui.Memo/Views/MemoPage.xaml
+++ b/src/Hanori.Maui.Memo/Views/MemoPage.xaml
@@ -2,11 +2,26 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Hanori.Maui.Memo.Views.MemoPage"
+             xmlns:viewModels="clr-namespace:Hanori.Maui.Memo.ViewModels"
              Title="MemoPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <ContentPage.BindingContext>
+        <viewModels:MemoViewModel/>
+    </ContentPage.BindingContext>
+
+    <VerticalStackLayout Spacing="10" Margin="5">
+        <Editor x:Name="TextEditor"
+                Placeholder="Enter your note"
+                Text="{Binding Text}"
+                HeightRequest="100" />
+
+        <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
+            <Button Text="Save"
+                    Command="{Binding SaveCommand}"/>
+
+            <Button Grid.Column="1"
+                    Text="Delete"
+                    Command="{Binding DeleteCommand}"/>
+
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
