(Global DB<=>App 연결작업) DB Memos Read 후 조회 기능 구현

--- a/src/Hanori.Maui.Memo/Views/AllMemoPage.xaml
+++ b/src/Hanori.Maui.Memo/Views/AllMemoPage.xaml
@@ -20,7 +20,7 @@
                     ItemsSource="{Binding Memos}"
                     Margin="20"
                     SelectionMode="Single"
-                    SelectionChangedCommand="{Binding SelectNoteCommand}"
+                    SelectionChangedCommand="{Binding SelectMemoCommand}"
                     SelectionChangedCommandParameter="{Binding Source={RelativeSource Self}, Path=SelectedItem}">
         <CollectionView.ItemsLayout>
             <LinearItemsLayout Orientation="Vertical" ItemSpacing="10"/>
